--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toei-jp/chevre-api-abstract-client",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.6",
   "description": "Chevre API Abstract Client Library for Javascript",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -77,7 +77,7 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
-    "@toei-jp/chevre-factory": "^1.0.0-alpha.2",
+    "@toei-jp/chevre-factory": "^1.0.0-alpha.7",
     "debug": "^3.2.5",
     "http-status": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
