--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "doc": "echo \"implementing...\" && exit 0",
     "mocha": "mocha",
     "nyc": "nyc mocha \"src/**/*.spec.ts\"",
-    "coverage": "npm run nyc | coveralls",
+    "coverage": "npm run nyc && nyc report --reporter=text-lcov | coveralls",
     "snyk": "snyk wizard",
     "test": "npm run check && npm run coverage",
     "tslint": "tslint --project tsconfig.json -c tslint.json --exclude \"**/*.spec.ts\" src/**/*.ts",
@@ -70,15 +70,15 @@
     "power-assert": "^1.6.1",
     "rimraf": "^2.6.2",
     "sinon": "^4.5.0",
-    "snyk": "^1.95.3",
+    "snyk": "^1.103.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.3"
   },
   "dependencies": {
-    "@toei-jp/chevre-factory": "^1.0.0-alpha.2",
-    "debug": "^3.2.5",
+    "@toei-jp/chevre-factory": "^1.0.0-alpha.10",
+    "debug": "^3.2.6",
     "http-status": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
     "qs": "^6.5.2"
